fix: align character with the header

--- a/src/components/Character/Character.module.css
+++ b/src/components/Character/Character.module.css
@@ -5,5 +5,5 @@
   position: fixed;
   left: 55%;
   margin-left: 24px;
-  top: 0;
+  top: 96px;
 }
